[package]
name = "tulok-reborn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0.19"
crossterm = "0.25"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
task-hookrs = "0.9.0"
chrono = "0.4.26"
anyhow = "1.0.72"
regex = "1.9.3"

